tests/NormalTests/paczka1/small_fuzzy/93530365.err
Error in line 3: kXFj5rRQ S613 73,7
Error in line 10: pEQp1KwWc S613 86,2
